2001-04-04  Eric Blake  <ebb9@email.byu.edu>

	* src/expr.cpp: comply with JLS 15.28 by substituting
	final expressions of type TypeName.identifier.

2001-04-04  Eric Blake  <ebb9@email.byu.edu>

	* src/bytecode.h: parenthesized expressions can
	be constant expressions. fixes Jacks 3.10.5-runtime-1
	and bug 66.

2001-04-04  Eric Blake  <ebb9@email.byu.edu>

        * src/control.h (Control):
	Remove NullLiteral(), as it is not needed when
	null is not compile-time constant.
	* src/bytecode.cpp (DeclareField, EmitExpression)
	(EmitStringAppendMethod, LoadLiteral):
	* src/expr.cpp (ProcessNullLiteral)
	(CastPrimitiveValue, ProcessPLUS)
	(ProcessAssignmentExpression):
	Remove references to NullLiteral().  Now
	null is not a compile-time constant.  Fixes
	bug 62.

2001-04-03  Eric Blake  <ebb9@email.byu.edu>

	* src/expr.cpp: Make const expressions involving binary
	operators & ^ | && || and trinary ?: correctly const. Fixes
	Jacks tests 15.28-primitive-13, -primitive-15, -primitive-17,
	-string-13, and -string-16, and a pair of bugs.

2001-04-01  Eric Blake  <ebb9@email.byu.edu>

	* src/bytecode.cpp (ByteCode::EmitStringAppendMethod):
	Do not use append(char[]) because it does not do the same
	as char[].toString(). Fixes jacks tests 15.18.1.1-runtime-1
	and 15.26.2-runtime-1

2001-04-01  Eric Blake  <ebb9@email.byu.edu>

	* src/ast.h:
	* src/lookup.h:
	* src/lookup.cpp:
	Add use of reinterpret_cast<>() and
	dynamic_cast<>() to remove warnings when
	compiling with aCC.  This includes moving
	blocks of code so that dynamic_cast<>()
	is not operating on incomplete classes.
	* src/op.h:
	* src/op.cpp (Operators):
	Changed access to string literals to be
	through const char * instead of char *,
	to remove warnings when compiling with
	aCC.
	* src/symbol.h:
	Remove the use of overload as an identifier,
	as it conflicts with the (obsolete) C++
	keyword.

2001-03-30  Eric Blake  <ebb9@email.byu.edu>

	* src/jikesapi.cpp (DefaultFileWriter):