@@ -1,3 +1,9 @@
+2001-04-04  Russ Trotter  <rtrotter@farcast.net>
+
+	* src/bytecode.cpp: Add line number table
+	generation to class variable initializers
+	not inside static initializer blocks.
+
 2001-04-04  Eric Blake  <ebb9@email.byu.edu>
 
 	* src/expr.cpp: comply with JLS 15.28 by substituting
